--- a/index.html
+++ b/index.html
@@ -15,6 +15,51 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header class="header">
+    <div class="header__inner">
+      <div class="container">
+        <a class="logo" href="#">
+          <img src="images/logo-nav.svg" alt="logo-icon">
+        </a>
+        <nav class="nav">
+          <ul class="menu__list">
+            <li class="menu__item active">
+              <a class="menu__link" href="#">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Best for Youtube</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Category</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Upgrade</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">FAQ</a>
+            </li>
+          </ul>
+          <a class="header__btn" href="#">Login</a>
+        </nav>
+      </div>
+    </div>
+    <div class="container">
+      <div class="hero">
+        <h1 class="hero__title">Free download sound effects without copyright</h1>
+        <p class="hero__desc">Download free copyright sound effect for your YouTube video and any use.</p>
+        <form class="hero__form" action="#">
+          <div class="search__icon">
+            <input class="hero__search" id="hero-search" type="search" placeholder="Search sound effects">
+         </div>
+         <p class="hero__search-desc">Try keyword: happy, funny, natural, horror, jumpscare and more</p>
+        </form>
+        <p class="hero__meta">
+          650.654 Available Sounds. Library Updated Weekly. 
+          <a class="hero__meta-link" href="#">See popular sounds</a>
+        </p>
+      </div>
+    </div>
+  </header>
 
 
 
