add header section adaptive

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
           </ul>
           <a class="header__btn" href="#">Login</a>
         </nav>
+        <button class="menu__btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </div>
     </div>
     <div class="container">
