--- a/index.html
+++ b/index.html
@@ -65,8 +65,50 @@
       </div>
     </div>
   </header>
-
-
+  <section class="partners">
+    <div class="container">
+      <h3 class="partners__title">
+        Trusted by top Youtuber and Production House
+      </h3>
+      <ul class="partners__list">
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-1.jpg" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-2.jpg" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-3.png" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-4.png" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-5.png" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-6.png" alt="">
+          </a>
+        </li>
+        <li class="partners__item">
+          <a class="partners__item-link" href="#">
+            <img class="partners__item-img" src="images/partners-7.png" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
 
   <script src="js/main.js"></script>
 </body>
